<resources>
    <string name="app_name">SmartpointS</string>
    <string name="okbutton">ok</string>
    <string name="pleaseenterbillno">Please Enter Your Bill Amount</string>
    <string name="submit">Submit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="points_prompt">choose points</string>
    <string name="colon"> : </string>
    <string name="userprofile">PointHub-Master</string>
    <string-array name="point_arrays">
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
    </string-array>
    <string name="title_activity_navigation">Smart Points</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_screen">NavigationScreen</string>
    <string name="title_activity_terms_and_conditions">title_activity_terms_and_conditions</string>
    <string name="title_activity_privact_policy">title_activity_privact_policy</string>
    <string name="a">what is smart points?</string>
    <string name="aans">Smartpoints  is a reward program that enables you to "earn points every time you make a purchase"
        at a Smartpoints  Store, you are instantly rewarded with Smartpoints which is credited into your Smartpoints
        Account</string>
    <string name="b">.How does the reward system work? </string>
    <string name="bans">Its simple. When you spend at any Smartpoints  Store you earn a reward as a token
        of thank you from our partner Store for doing business with them. For e.g.: If they are running an assured reward
        of 5% Smartpoints  reward and you make a purchase of INR 1000,
        you would be entitled to EARN 50 Smartpoints. </string>
    <string name="c">are there any joining fee?</string>
    <string name="cans">No its free and always will be</string>
    <string name="d">what is reedem?</string>
    <string name="dans">. You can use Smartpoints  reward program by just downloading it from the google playstore or
        taking the app from our partner and installing it on to your device and you are ready to earn smartpoints.?</string>
    <string name="e">What is my Eligibility criteria</string>
    <string name="eans">. You should be having a smartphone with android version 4.0 or above.</string>
    <string name="f">Is it compulsory to have the Smartpoints  app?</string>
    <string name="fans">Yes its compulsory. And there are great advantages if you have the app! track the Smartpoints  you
        recieved from our Smartpoints  Stores at your fingertips Manage your Smartpoints  account,smartpoints  earned and
        redeemed across Stores . Stay updated about latest offers from all the retailers. As new retailers keep joining the
        program, their offers will be instantly available to you</string>
    <string name="g">Will I get a card that I need to carry every time I spend at a Smartpoints  Store? </string>
    <string name="gans"> No, its a card-less program. Your smartphone is your unique identity Every time you wish to do a
        transaction at a Smartpoints  Store, all you have to do is scan the qr code and follow the steps. </string>
    <string name="h">How do I track my Smartpoints</string>
    <string name="hans">You can check your Smartpoints  in our mobile app.</string>
    <string name="i">How does the merchant know whether I am a Smartpoints  member or not? How do I identify myself? </string>
    <string name="ians">There is no physical or digital card as your identity. It is your smartphone which is your unique identity.
        If you are not a Smartpoints  member yet, when you are in any of the Smartpoints  Store, you can download  our app from google
        playstore or ask the owner of the store to give you the app.</string>
    <string name="j">What is the process to Earn, Track and Redeem my Smartpoints?</string>
    <string name="jans">. Once you install the smartpoints app you can find out our merchant
     partners. Spot the Smartpoints  logo, at the transacting Store to earn Smartpoints. You can track your accumulated Smartpoints  on our Smartpoints
        app or by calling us on our helpline number. Whenever you shop at any Smartpoints  Store, you can redeem your Smartpoints  against your bill.
    </string>
    <string name="k">What is the value of my Smartpoints ?</string>
    <string name="kans">One Smartpoint  is equal to 1 rupee.</string>
    <string name="title_activity_ad_mobs">AdMobsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="This_privacy_policy_governs">This privacy policy governs your use of products, services, content, features, technologies or functions offered by Bizzmark ("smartpoints" We") and all related sites, applications, and services (collectively "smartpoints loyalty  Program") (including, without limitation, when you provide any information in relation to your use of smartpoints loyalty  Program). You accept and consent to this privacy policy when you sign up for, access, or use the smartpoints loyalty Program thereby expressly agree to our use and disclosure of your personal information and direct us to do so in the manner described in this privacy policy.\n

Our privacy policy describes the information We collect and how We use that information. smartpoints takes the processing of your information very seriously and will use your information only in accordance with the terms of this privacy policy. For the purposes of this privacy policy, the term "information" means any confidential and/or personally identifiable information or other\n
information related to users of smartpoints loyalty Program, including but not limited to smartpoints  members and smartpoints  partners. We will not sell or rent your information to third parties for their marketing purposes without your explicit consent. However, in order for us to offer smartpoints  loyalty  Program to our users; enhance the quality of smartpoints  services from time to time; and protect the interests of our users, We will in limited circumstances share some of your information with third parties under strict restrictions. \n
This privacy policy is intended to govern the use of smartpoints  services by our users (including, without limitation those who use the smartpoints  services in the course of their trade or business) unless otherwise agreed through contract. While the word "privacy" may mean different things to different people, we believe that once you understand how we use your information; the steps we take to protect it, and the resulting benifits to you, you will not only feel confident when sharing information with us, but will also find your participation in the program a very rewarding experience.\n
.

</string>
    <string name="smartpoints_collects_both_personal">smartpoints  collects both personal and non-personal information using the methods listed below. Our primary purpose in collecting such information is to provide you with a personalized smartpoints  experience by displaying content and delivering offers that are likely to be of interest to you according to your preferences.</string>
    <string name="Our_primary_purpose_in_collecting">smartpoints  collects both personal and non-
personal information using the methods
listed below. Our primary purpose in
collecting such information is to provide
you with a personalized smartpoints  experience
by displaying content and delivering offers
that are likely to be of interest to you
according to your preferences.
</string>
    <string name="our_privacy">
Our privacy policy describes the
information We collect and how We use
that information. smartpoints takes the
processing of your information very
seriously and will use your information only
in accordance with the terms of this
privacy policy. For the purposes of this
privacy policy, the term "information"
means any conﬁdential and/or personally
identiﬁable information or other
information related to users of smartpoints loyalty Program, including but not limited
to smartpoints  members and smartpoints  partners.
We will not sell or rent your information to
third parties for their marketing purposes
without your explicit consent. However, in
order for us to offer smartpoints  loyalty
Program to our users; enhance the quality
of smartpoints  services from time to time; and
protect the interests of our users, We will in
limited circumstances share some of your
information with third parties under strict
restrictions, as described in more detail in
sections 5 and 6 of this privacy policy.
This privacy policy is intended to govern
the use of smartpoints  services by our users
(including, without limitation those who use
the smartpoints  services in the course of their
trade or business) unless otherwise agreed
through contract.
While the word "privacy" may mean
different things to different people, we
believe that once you understand how we
use your information; the steps we take to
protect it, and the resulting beneﬁt to you,
you will not only feel conﬁdent when
sharing information with us, but will also
find your participation in the program a very
rewarding experience.

</string>
    <string name="Totakeadvantage">To take advantage of the offers available at smartpoints  loyalty Program, you must register for our service and become a smartpoints  Member/Partner. smartpoints  may collect personal information when you register with us and when you use smartpoints  services. smartpoints  may combine information about you that We have, with information We obtain from smartpoints  merchants. During registration, We may require members to give us basic contact information (such as your first name, last name and email address) and demographic information (such as your zip code, age and gender).


</string>
    <string name="AutomaticInformation">Automatic Information collected through Participation in the smartpoints  loyalty  Program when you sign in to the smartpoints  mobile application, the server automatically recognizes you by your cookie. This cookie acts as a unique identification , and is linked to your personal information, which allows us to personalize the application to your specified interests and allows you to access your personal information. It also allows us to keep track of your activity on our mobile application. This information may be added to your personal profile and used to deliver offers and advertisements that are most relevant to your interests.\n

smartpoints  also retrieves the following information from your application :\n

1. Date and time of your visit.\n
2.Your registered smartpoints  account information.\n
3.Purchase transaction details  (from merchants.\n
4.  Device details (like device name and software version details, imei number) This information, sometimes called log-in  or click stream data, is used to monitor  mobile applications performance and ensure they function properly. It may also be appended to your personal profile so that We may further tailor the Program to your interests.\n

</string>
    <string name="Dateandtimeofyourvisit">
       1. Date and time of your visit.\n
2.Your registered smartpoints  account
information.\n
3.Purchase transaction detail (from
smerchants.\n
4.  Device details (like device name and
software version details, IMEI number)
This information, sometimes called log-ﬁle
or clickstream data, is used to monitor
mobile applications performance and
ensure they functions properly. It may also
be appended to your personal profile so
that We may further tailor the Program to
your interests.\n
    </string>
</resources>