<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pointhub.FaqExpandable"
    android:id="@+id/main">

    <Button
        android:id="@+id/expandableButton1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ba1f04"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton1"
        android:paddingRight="10dp"
        android:text="@string/a"
        android:textColor="#fff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton1"
        android:background="#90ba1f04"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aans" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


    <Button
        android:id="@+id/expandableButton2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout1"
        android:background="#b77803"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton2"
        android:paddingRight="10dp"
        android:text="@string/b"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton2"
        android:background="#90b77803"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bans" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <Button
        android:id="@+id/expandableButton3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout2"
        android:background="#b77803"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton2"
        android:paddingRight="10dp"
        android:text="@string/c"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#90b77803"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical"
        android:layout_below="@+id/expandableLayout2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cans" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>



    <Button
        android:id="@+id/expandableButton4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout3"
        android:background="#066da1"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton4"
        android:paddingRight="10dp"
        android:text="@string/d"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton4"
        android:background="#90066da1"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dans" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>



    <Button
        android:id="@+id/expandableButton5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout4"
        android:background="#066da1"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton5"
        android:paddingRight="10dp"
        android:text="@string/e"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton5"
        android:background="#90066da1"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eans" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <Button
        android:id="@+id/expandableButton6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout5"
        android:background="#066da1"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton6"
        android:paddingRight="10dp"
        android:text="@string/f"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton6"
        android:background="#90066da1"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fans" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <Button
        android:id="@+id/expandableButton7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout6"
        android:background="#066da1"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton7"
        android:paddingRight="10dp"
        android:text="@string/g"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton7"
        android:background="#90066da1"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gans" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <Button
        android:id="@+id/expandableButton8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout7"
        android:background="#066da1"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton8"
        android:paddingRight="10dp"
        android:text="@string/h"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton8"
        android:background="#90066da1"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hans" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <Button
        android:id="@+id/expandableButton9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout8"
        android:background="#066da1"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton9"
        android:paddingRight="10dp"
        android:text="@string/i"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton9"
        android:background="#90066da1"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ians" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


    <Button
        android:id="@+id/expandableButton10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout9"
        android:background="#066da1"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton4"
        android:paddingRight="10dp"
        android:text="@string/j"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton10"
        android:background="#90066da1"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jans" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


    <Button
        android:id="@+id/expandableButton11"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout10"
        android:background="#066da1"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton10"
        android:paddingRight="10dp"
        android:text="@string/j"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout11"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton10"
        android:background="#90066da1"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jans" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

</RelativeLayout>

    </android.support.v4.widget.NestedScrollView>


