<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_faq"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pointhub.Faq"
    android:orientation="vertical">

    <Button
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:id="@+id/nav_back"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/cardview_dark_background"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/cardview_dark_background"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/cardview_dark_background"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/cardview_dark_background"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/cardview_dark_background"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/cardview_dark_background"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/cardview_dark_background"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/cardview_dark_background"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/cardview_dark_background"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/cardview_dark_background"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/cardview_dark_background"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/cardview_dark_background"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/cardview_dark_background"
            />
    </LinearLayout>




</LinearLayout>
